--- a/app/scripts/views/yhteinen/seurantalomakeDemo.html
+++ b/app/scripts/views/yhteinen/seurantalomakeDemo.html
@@ -6,9 +6,9 @@
     <juku-seurantalomake-palveluliikenne></juku-seurantalomake-palveluliikenne>
   </div>
   <div class="row">
-    <div class="col-md-12">
-      <h3>Seutulippu</h3>
-      <juku-seurantalomake-seutulippu></juku-seurantalomake-seutulippu>
-    </div>
+    <juku-seurantalomake-kaupunkiliput></juku-seurantalomake-kaupunkiliput>
+  </div>
+  <div class="row">
+    <juku-seurantalomake-seutulippu></juku-seurantalomake-seutulippu>
   </div>
 </div>
