--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -39,3 +39,4 @@
 @import '../scripts/components/seurantalomakePaikallisliikenne'
 @import '../scripts/components/seurantalomakePalveluliikenne'
 @import '../scripts/components/seurantalomakeSeutulippu'
+@import '../scripts/components/seurantalomakeKaupunkiliput'
