LIVIJUKU-398 Seurantalomake demo

--- a/app/scripts/components/seurantalomakeKaupunkiliput/index.styl
+++ b/app/scripts/components/seurantalomakeKaupunkiliput/index.styl
@@ -1,17 +1,23 @@
 .seurantalomakekaupunkiliput
   .table
-    border: 1px solid #ddd
+    border: none
     th:first-child
-      width: 24%
+      width: 17%
     th:last-child
       width: 4%
+      border: none
     th
-      width: 12%
+      width: 10%
       font-weight: bold
     td
       vertical-align: middle
     tfoot
       font-weight: bold
+      tr:last-child
+        td:first-child
+          border: none
+        td:last-child
+          border: none
    .yhteensa
       float: right
       margin-top:7px
