LIVIJUKU-464 Suunnittelu- ja päätöksentekonäkymässä väärä paluulinkkiteksti

--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -132,7 +132,7 @@
   <div class="row">
     <div class="col-md-12">
       <juku-link-prev href="#/y/hakemukset/{{tyyppi}}">
-        Palaa avustushakemusten suunnittelunäkymään
+        Palaa kaikkiin hakemuksiin
       </juku-link-prev>
     </div>
   </div>
