--- a/app/scripts/views/yhteinen/kayttajatiedot.html
+++ b/app/scripts/views/yhteinen/kayttajatiedot.html
@@ -22,13 +22,7 @@
       <td>{{viranomainen.sahkoposti}}</td>
       <td>{{viranomainen.kirjautumisaika | date:'dd.MM.yyyy HH:mm:ss'}}</td>
       <td ng-if="hasDeleteKayttajaPermission">
-        <a href="" juku-varmistusdialogi
-            varmistusotsake="Oletko varma että haluat merkitä käyttäjän poistetuksi juku-järjestelmästä? "
-            varmistusteksti="Poistetulle käyttäjälle ei enää lähetetä sähköposti-ilmoituksia ja käyttäjää ei näytetä käyttäjälistauksissa. Käyttäjän poistaminen juku-järjestelmästä ei poista käyttäjän liikenneviraston käyttäjätunnusta eikä estä käyttäjää kirjautumasta juku-järjestelmään. Jos käyttäjä halutaan kokonaan poistaa, niin käyttäjä pitää poistaa liikenneviraston käyttäjähallinnasta ja tämän jälkeen juku-järjestelmästä."
-
-            operaatio="delete(viranomainen.tunnus)">
-          <span class="glyphicon glyphicon-remove-sign"></span> Poista
-        </a>
+        <juku-delete-kayttaja-link></juku-delete-kayttaja-link>
       </td>
     </tr>
      </tbody>
@@ -51,13 +45,7 @@
       <td>{{henkilo.roolit | erotteleRoolit}}</td>
       <td>{{henkilo.sahkoposti}}</td>
       <td ng-if="hasDeleteKayttajaPermission">
-        <a href="" juku-varmistusdialogi
-            varmistusotsake="Oletko varma että haluat merkitä käyttäjän poistetuksi juku-järjestelmästä? "
-            varmistusteksti="Poistetulle käyttäjälle ei enää lähetetä sähköposti-ilmoituksia ja käyttäjää ei näytetä käyttäjälistauksissa. Käyttäjän poistaminen juku-järjestelmästä ei poista käyttäjän liikenneviraston käyttäjätunnusta eikä estä käyttäjää kirjautumasta juku-järjestelmään. Jos käyttäjä halutaan kokonaan poistaa, niin käyttäjä pitää poistaa liikenneviraston käyttäjähallinnasta ja tämän jälkeen juku-järjestelmästä."
-
-            operaatio="delete(viranomainen.tunnus)">
-          <span class="glyphicon glyphicon-remove-sign"></span> Poista
-        </a>
+        <juku-delete-kayttaja-link></juku-delete-kayttaja-link>
       </td>
     </tr>
     </tbody>
