LIVIJUKU-415 Mobilinäkymän (kapean näkymän) Tunnusluku-linkit ei toimi.

--- a/app/scripts/components/sidebar/index.html
+++ b/app/scripts/components/sidebar/index.html
@@ -52,7 +52,7 @@
       JUKUn käyttäjät
     </a></li>
     <li>
-      <a class="navbartxt" href="https://testiextranet.liikennevirasto.fi/extranet/c/portal/logout">
+      <a class="navbartxt" href="{{logoutUrl}}">
         Kirjaudu ulos
       </a>
     </li>
