LIVIJUKU-470 - formGroupCompact direktiiviin input elementit haetaan nyt suoriterivin form-komponentista.

--- a/app/scripts/components/formInput/input-compact.html
+++ b/app/scripts/components/formInput/input-compact.html
@@ -1,11 +1,11 @@
 <div class="form-group" ng-class="{'has-feedback': input().$invalid,
                                    'has-error': input().$invalid,
                                    'has-success': input().$valid && input().$dirty}"
-     tooltip="{{errormessage()}}"
+     tooltip="{{tooltipText()}}"
      tooltip-placement="top"
      tooltip-enable="input().$invalid">
 
-  <label for="{{name()}}" class="sr-only">Nimi</label>
+  <label for="{{name}}" class="sr-only">{{label}}</label>
 
   <ng-transclude></ng-transclude>
 
