--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -96,7 +96,7 @@
                      placeholder="Linja-autot"
                      type="number" numeric-integer-only="" select-on-click
                      ng-readonly="isReadonly()">
-            </form-group-compact-->
+            </form-group-compact>
           </td>
           <td>
             <form-group-compact label="Taksit" errormessage="kokonaislukuErrorMessage">
@@ -105,7 +105,7 @@
                      placeholder="Taksit"
                      type="number" numeric-integer-only="" select-on-click
                      ng-readonly="isReadonly()">
-            </form-group-compact-->
+            </form-group-compact>
           </td>
           <td><input name="ajokilometrit" type="text" class="form-control" numeric-km-only="" ng-currency=""
                      ng-readonly="isReadonly()"
