LIVIJUKU-470 - palveluliikenteen read-only fix

--- a/app/scripts/views/hakemus/seuranta-forms.html
+++ b/app/scripts/views/hakemus/seuranta-forms.html
@@ -28,7 +28,7 @@
         </div>
       </accordion-heading>
       <div class="panel-body">
-        <juku-seuranta-liikenne suoritteet="palLiikenneSuoritteet" tyyppi="PAL"></juku-seuranta-liikenne>
+        <juku-seuranta-liikenne suoritteet="palLiikenneSuoritteet" tyyppi="PAL" is-readonly="!hakemusTallentaminenEnabled()"></juku-seuranta-liikenne>
       </div>
     </accordion-group>
   </accordion>
